--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Spacial Hash</title>
 </head>
 <body>
-    <input checked="true" type="checkbox" onChange="if (this.checked){useSpacialHash=true}else{useSpacialHash=false}">use spacial hash</input>
 </body>
-<script src="p5.js"></script>
-<script src="script.js"></script>
+<script src="p5.min.js"></script>
+<script src="dat.gui.min.js"></script>
+<script defer src="script.js"></script>
 </html>
