--- a/fluid/index.html
+++ b/fluid/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spacial Hash</title>
+    <title>Fluid</title>
 </head>
-<body>
-    <a href="fluid/index.html">Fluid</a>
+<body>   
+    <div id="debug"></div>
+    <script src="script.js"></script>
 </body>
-<script src="dat.gui.min.js"></script>
-<script defer src="script.js"></script>
 </html>
