--- a/fluid/index.html
+++ b/fluid/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluid</title>
+    <style>
+        canvas{
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>   
     <div id="debug"></div>
+    <script src="utils.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
